#29 Assistances Screen fixed. Swagger updated
